{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 147,
  "lineage": "32faf935-b075-abd4-e502-f95565f0d162",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-020033e89361804a7",
            "public_dns": "ec2-54-168-171-76.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.168.171.76",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "handson-natgw-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06b7ff8c52635ae2d",
            "public_dns": "ec2-35-76-9-121.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.76.9.121",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "handson-natgw-1c"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sandbox",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-785c491f",
            "arn": "arn:aws:ec2:ap-northeast-1:512732232048:instance/i-0ea9b8ebd0767242a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea9b8ebd0767242a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fb15aab2a2327a8b",
            "private_dns": "ip-172-31-37-214.ap-northeast-1.compute.internal",
            "private_ip": "172.31.37.214",
            "public_dns": "ec2-3-112-235-122.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.112.235.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cf3bb92a57892c55",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-35f9297d",
            "tags": {
              "Name": "sandbox-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-8df861c4"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-785c491f",
            "arn": "arn:aws:ec2:ap-northeast-1:512732232048:instance/i-0c8443a03afebe1e2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8443a03afebe1e2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c006a58f052b1702",
            "private_dns": "ip-172-31-41-213.ap-northeast-1.compute.internal",
            "private_ip": "172.31.41.213",
            "public_dns": "ec2-13-230-22-198.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.230.22.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c21991c8f3bf2a4e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-35f9297d",
            "tags": {
              "Name": "sandbox-02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-8df861c4"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:512732232048:internet-gateway/igw-0b4943a13a4549109",
            "id": "igw-0b4943a13a4549109",
            "owner_id": "512732232048",
            "tags": {
              "Name": "handson"
            },
            "vpc_id": "vpc-09454ce3cc3539b06"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-020033e89361804a7",
            "id": "nat-0d5de0de8fb7e5e50",
            "network_interface_id": "eni-0249fb75fb397df3b",
            "private_ip": "10.0.1.10",
            "public_ip": "54.168.171.76",
            "subnet_id": "subnet-048be9fb9fc42bdcc",
            "tags": {
              "Name": "handson-1a"
            }
          },
          "depends_on": [
            "aws_eip.nat_1a",
            "aws_subnet.public_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b7ff8c52635ae2d",
            "id": "nat-093b68db2f75166c0",
            "network_interface_id": "eni-05814cb6eeef11df9",
            "private_ip": "10.0.2.56",
            "public_ip": "35.76.9.121",
            "subnet_id": "subnet-0c939fc586f1dd0b5",
            "tags": {
              "Name": "handson-1c"
            }
          },
          "depends_on": [
            "aws_eip.nat_1c",
            "aws_subnet.public_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0835707d882095f461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0d5de0de8fb7e5e50",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0835707d882095f46",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_1a",
            "aws_route_table.private_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f1fca20fa3bc2c161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-093b68db2f75166c0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f1fca20fa3bc2c16",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_1c",
            "aws_route_table.private_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b4943a13a4549109",
            "id": "r-rtb-0fc3fcfe0bdfab9d41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc3fcfe0bdfab9d4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.main",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0835707d882095f46",
            "owner_id": "512732232048",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "handson-private-1a"
            },
            "vpc_id": "vpc-09454ce3cc3539b06"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f1fca20fa3bc2c16",
            "owner_id": "512732232048",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "handson-private-1c"
            },
            "vpc_id": "vpc-09454ce3cc3539b06"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fc3fcfe0bdfab9d4",
            "owner_id": "512732232048",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "handson-public"
            },
            "vpc_id": "vpc-09454ce3cc3539b06"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b32c546a49dc54ca",
            "route_table_id": "rtb-0835707d882095f46",
            "subnet_id": "subnet-0e58eb88f665e4119"
          },
          "depends_on": [
            "aws_route_table.private_1a",
            "aws_subnet.private_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad012ef24799ac05",
            "route_table_id": "rtb-0f1fca20fa3bc2c16",
            "subnet_id": "subnet-002d66b7f160c7333"
          },
          "depends_on": [
            "aws_route_table.private_1c",
            "aws_subnet.private_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a20a58bca302f017",
            "route_table_id": "rtb-0fc3fcfe0bdfab9d4",
            "subnet_id": "subnet-048be9fb9fc42bdcc"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a7c2eea8255bf66",
            "route_table_id": "rtb-0fc3fcfe0bdfab9d4",
            "subnet_id": "subnet-0c939fc586f1dd0b5"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:512732232048:subnet/subnet-0e58eb88f665e4119",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0e58eb88f665e4119",
            "map_public_ip_on_launch": false,
            "owner_id": "512732232048",
            "tags": {
              "Name": "handson-private-1a"
            },
            "vpc_id": "vpc-09454ce3cc3539b06"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:512732232048:subnet/subnet-002d66b7f160c7333",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-002d66b7f160c7333",
            "map_public_ip_on_launch": false,
            "owner_id": "512732232048",
            "tags": {
              "Name": "handson-private-1c"
            },
            "vpc_id": "vpc-09454ce3cc3539b06"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:512732232048:subnet/subnet-048be9fb9fc42bdcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-048be9fb9fc42bdcc",
            "map_public_ip_on_launch": false,
            "owner_id": "512732232048",
            "tags": {
              "Name": "handson-public-1a"
            },
            "vpc_id": "vpc-09454ce3cc3539b06"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:512732232048:subnet/subnet-0c939fc586f1dd0b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c939fc586f1dd0b5",
            "map_public_ip_on_launch": false,
            "owner_id": "512732232048",
            "tags": {
              "Name": "handson-public-1c"
            },
            "vpc_id": "vpc-09454ce3cc3539b06"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:512732232048:vpc/vpc-09454ce3cc3539b06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ae9c24f23615ddf",
            "default_route_table_id": "rtb-07ace990dbd9e763d",
            "default_security_group_id": "sg-054e5ca8de9009e0a",
            "dhcp_options_id": "dopt-e0a39e87",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09454ce3cc3539b06",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07ace990dbd9e763d",
            "owner_id": "512732232048",
            "tags": {
              "Name": "handson"
            }
          }
        }
      ]
    }
  ]
}